...
        android:layout_height="3dp"
        android:layout_below="@id/CommunityText"
        android:layout_marginTop="10dp"
        android:background="#D8D8D8"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postRecyclerView"
        android:layout_below="@id/Divider_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

...
